u can start by admin registing then making teacher student account..

--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
+    },
+    "dependencies": {
+        "@fullcalendar/daygrid": "^6.1.15",
+        "@fullcalendar/list": "^6.1.15",
+        "@fullcalendar/timegrid": "^6.1.15"
     }
 }
