--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.2",
         "jubaer/zoom-laravel": "^1.3",
         "laravel/framework": "^11.0",
+        "laravel/tinker": "*",
         "laravel/ui": "^4.5",
         "livewire/livewire": "^3.5",
         "mcamara/laravel-localization": "^2.0",
