--- a/.gitignore
+++ b/.gitignore
@@ -1,840 +1,12 @@
-# Ignore the Composer vendor directory
-/vendor/
-
-# Ignore the Node.js node_modules directory
-/node_modules/
-
-# Ignore the npm/yarn build directory
-/public/build/
-
-# Ignore the Laravel storage directory (except for the .gitignore file)
+/node_modules
+/public/hot
+/public/storage
 /storage/*.key
-/storage/framework/cache/*
-/storage/framework/sessions/*
-/storage/framework/testing/*
-/storage/framework/views/*
-/storage/logs/*
-!/storage/.gitignore
-
-# Ignore the Laravel bootstrap cache directory
-/bootstrap/cache/
-
-# Ignore the environment file (contains sensitive information)
-/.env
-
-# Ignore the .env backup file
-/.env.backup
-
-# Ignore the .env local file
-/.env.local
-
-# Ignore the .env testing file
-/.env.testing
-
-# Ignore the .env production file
-/.env.production
-
-# Ignore the .env development file
-/.env.development
-
-# Ignore the .env staging file
-/.env.staging
-
-# Ignore the .phpunit.result.cache file
-/.phpunit.result.cache
-
-# Ignore the Composer lock file (optional, but recommended)
-/composer.lock
-
-# Ignore the npm/yarn lock files
-/package-lock.json
-/yarn.lock
-
-# Ignore the PHPStorm IDE files
-/.idea/
-
-# Ignore the VS Code settings
-/.vscode/
-
-# Ignore the macOS .DS_Store files
-.DS_Store
-
-# Ignore the Windows Thumbs.db files
-Thumbs.db
-
-# Ignore the Laravel debugbar storage
-/debugbar/
-
-# Ignore the Laravel Telescope storage
-/telescope/
-
-# Ignore the Laravel Horizon storage
-/horizon/
-
-# Ignore the Laravel Nova storage
-/nova/
-
-# Ignore the Laravel Nova assets
-/public/vendor/nova/
-
-# Ignore the Laravel Nova config
-/config/nova.php
-
-# Ignore the Laravel Nova lang
-/resources/lang/vendor/nova/
-
-# Ignore the Laravel Nova views
-/resources/views/vendor/nova/
-
-# Ignore the Laravel Nova routes
-/routes/nova.php
-
-# Ignore the Laravel Nova database migrations
-/database/migrations/nova/
-
-# Ignore the Laravel Nova database seeds
-/database/seeds/nova/
-
-# Ignore the Laravel Nova tests
-/tests/Nova/
-
-# Ignore the Laravel Nova stubs
-/stubs/nova/
-
-# Ignore the Laravel Nova composer.json
-/composer.json
-
-# Ignore the Laravel Nova composer.lock
-/composer.lock
-
-# Ignore the Laravel Nova package.json
-/package.json
-
-# Ignore the Laravel Nova webpack.mix.js
-/webpack.mix.js
-
-# Ignore the Laravel Nova phpunit.xml
-/phpunit.xml
-
-# Ignore the Laravel Nova .env.example
-/.env.example
-
-# Ignore the Laravel Nova .gitattributes
-/.gitattributes
-
-# Ignore the Laravel Nova .gitignore
-/.gitignore
-
-# Ignore the Laravel Nova .styleci.yml
-/.styleci.yml
-
-# Ignore the Laravel Nova .github
-/.github/
-
-# Ignore the Laravel Nova .php_cs
-/.php_cs
-
-# Ignore the Laravel Nova .php_cs.cache
-/.php_cs.cache
-
-# Ignore the Laravel Nova .php_cs.dist
-/.php_cs.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.php_cs.cache.dist
-
-# Ignore the Laravel Nova .php_cs.cache.dist
-/.
+/vendor
+.env
+.env.backup
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
